--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,10 @@
 // Colors
 //
+$lightBlue: rgb(49, 78, 111);
+$darkblue: rgb(30, 40, 51);
+$buttoncolor: rgb(33, 74, 128);
+$buttonhover: rgb(54, 112, 187);
+$gray: #434a52;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size:3.2rem;
