--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,9 @@
 @import './base/settings';
 @import './base/base';
-
+@import './components/loginpage';
+@import './components/header';
+@import './components/wrapper';
+@import './components/contract';
+@import './components/userpage';
+@import './components/contracts-from';
+@import './components/contract-page.scss';
